Closed
Bug 652318
Opened 12 years ago
Closed 11 years ago
Email sender is displayed as quoted when name in from is quoted.
Categories
(Thunderbird :: Message Reader UI, defect)
Tracking
(thunderbird5.0 beta2-fixed, thunderbird6 fixed)
RESOLVED
FIXED
Thunderbird 7.0
Tracking | Status | |
---|---|---|
thunderbird5.0 | --- | beta2-fixed |
thunderbird6 | --- | fixed |
People
(Reporter: himorin, Assigned: squib)
References
Details
(Keywords: regression)
Attachments
(2 files)
7.06 KB,
image/png
|
Details | |
4.11 KB,
patch
|
Bienvenu
:
review+
standard8
:
approval-comm-aurora+
standard8
:
approval-thunderbird5.0+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Windows NT 6.1; rv:2.0.2pre) Gecko/20110415 Thunderbird/3.3a4pre E-mail with From or To etc. in format "name" <address> is displayed as "name" (quoted) in the mail list pain. (see attachment) Not occurred in 3.1 nightly.
Updated•12 years ago
|
Keywords: regression,
regressionwindow-wanted
Reporter | ||
Comment 1•12 years ago
|
||
Mozilla/5.0 (Windows NT 6.1; rv:2.0b10pre) Gecko/20110125 Thunderbird/3.3a3pre : works fine Mozilla/5.0 (Windows NT 6.1; rv:2.0b12pre) Gecko/20110206 Thunderbird/3.3a3pre : works fine Mozilla/5.0 (Windows NT 6.1; rv:2.0b13pre) Gecko/20110314 Thunderbird/3.3a3pre : regressed Mozilla/5.0 (Windows NT 6.1; rv:2.0pre) Gecko/20110405 Thunderbird/3.3a4pre : regressed And similar, e-mail with "From: <addr>" is displayed as <addr>. (window is the same as above. # I don't upgrade my shredder so frequently, I don't have any between the above window.
Assignee | ||
Comment 2•12 years ago
|
||
I'm almost totally certain this is a regression from bug 243631. I was going to file this myself, but I've repeatedly forgot about it since the bug was fixed.
Assignee | ||
Comment 3•11 years ago
|
||
Since this is really obnoxious for me lately (lots of mail sent to me has a quoted display name), I think I'm going to try to get this fixed for Miramar. However, I need some advice as to how to proceed. I see 3 possible ways: 1) Change ParseHeaderAddresses to strip the quotes, 2) Use ExtractHeaderAddressName and ExtractHeaderAddressMailboxes 3) Add an optional "strip quotes" flag to ParseHeaderAddresses 4) Create a new function that returns the unquoted name and mailbox (1) has the potential to break other things, so I'm leery of doing it. (2) is probably slightly slower, and I'd rather not regress performance here (that said, I have no idea how *much* slower it would be). (3) seems pretty good, since ParseHeaderAddresses is noscript, and thus wouldn't affect too many extensions, but we'd probably have to update the UUID. (4) is a little more work and I'm not totally sure the new function would be that useful to other people. Ideas?
Assignee: nobody → squibblyflabbetydoo
Status: NEW → ASSIGNED
Assignee | ||
Comment 4•11 years ago
|
||
The simplest way would probably be do to the C++ equivalent of this: http://mxr.mozilla.org/comm-central/source/mail/base/content/selectionsummaries.js#222
Assignee | ||
Comment 5•11 years ago
|
||
Sorry about taking so long to fix this, but here's the simplest version of this patch, doing things like in selectionsummaries.js.
Attachment #539807 -
Flags: review?(dbienvenu)
Attachment #539807 -
Flags: approval-thunderbird5.0?
Comment 6•11 years ago
|
||
this looks good; I'm just building with it to test it.
Comment 7•11 years ago
|
||
Comment on attachment 539807 [details] [diff] [review] Fix this with tests kudos for using view.getCellText :-) It was tricky testing this because the display name caching code defeated the fix, in that we used the cached name instead of the fixed name. This makes it that much more important that this fix get into tb 5 (changing an address book should essentially clear the cache, but better not to get the bad data in the cache in the first place)
Attachment #539807 -
Flags: review?(dbienvenu) → review+
Updated•11 years ago
|
Attachment #539807 -
Flags: approval-thunderbird5.0?
Attachment #539807 -
Flags: approval-thunderbird5.0+
Attachment #539807 -
Flags: approval-comm-aurora+
Comment 8•11 years ago
|
||
Checked into Miramar: http://hg.mozilla.org/releases/comm-miramar/rev/bdab6f853047
status-thunderbird5.0:
--- → beta2-fixed
Assignee | ||
Comment 9•11 years ago
|
||
Checked in: http://hg.mozilla.org/comm-central/rev/e840f4d4a1b3 http://hg.mozilla.org/releases/comm-aurora/rev/e01613d2db15 (The milestone for this bug should be 7.0, right?)
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 7.0
Updated•11 years ago
|
status-thunderbird6:
--- → fixed
![]() |
||
Comment 10•11 years ago
|
||
Comment on attachment 539807 [details] [diff] [review] Fix this with tests approval‑comm‑beta=me (unfortunately we don't have this in the Thunderbird product yet, but SeaMonkey 2.2 should have the patch just the same as Thunderbird 5 does).
Updated•7 years ago
|
Keywords: regressionwindow-wanted
You need to log in
before you can comment on or make changes to this bug.
Description
•