Bug 652318 - Email sender is displayed as quoted when name in from is quoted; r=bienvenu